--- a/main/domains/app-activate.json
+++ b/main/domains/app-activate.json
@@ -30,8 +30,8 @@
     "coll_chat_data_test": "testchatdata",
     "coll_cf_data": "chatcf",
     "coll_cf_data_test": "testchatcf",
-    "coll_coco_anno": "coco_anno",
-    "coll_coco_anno_test": "test_coco_anno"
+    "coll_anno_data": "anno_data",
+    "coll_anno_data_test": "test_anno_data"
   },
   "app-name": "woz-crowd",
   "description": "woz via crowd sourcing",
