dispatching based on database status

--- a/main/domains/app-2Dshape.json
+++ b/main/domains/app-2Dshape.json
@@ -28,6 +28,7 @@
     "coll_domain_data": "data",
     "coll_chat_data": "chatdata",
     "coll_chat_data_cache": "chatdata_cache",
+    "coll_cf_dispatch_semaphore": "cf_dispatch_semaphore",
     "coll_chat_data_test": "testchatdata",
     "coll_cf_data": "chatcf",
     "coll_cf_data_test": "testchatcf",
