--- a/main/domains/app-COCO.json
+++ b/main/domains/app-COCO.json
@@ -27,6 +27,8 @@
     "db-name": "layout-COCO",
     "coll_domain_data": "data",
     "coll_chat_data": "chatdata",
+    "coll_chat_data_cache": "chatdata_cache",
+    "coll_cf_dispatch_semaphore": "cf_dispatch_semaphore",
     "coll_chat_data_test": "testchatdata",
     "coll_cf_data": "chatcf",
     "coll_cf_data_test": "testchatcf",
