updated requirement file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,116 @@
-requests
+allennlp==0.4.3
+asn1crypto==0.22.0
+atomicwrites==1.1.5
+attrs==18.1.0
+awscli==1.15.29
+beautifulsoup4==4.6.0
+boto==2.48.0
+boto3==1.5.12
+botocore==1.10.29
+bz2file==0.98
+certifi==2017.11.5
+cf-deployment-tracker==1.0.2
+cffi==1.11.2
+chardet==3.0.4
 click==6.6
+colorama==0.3.9
+cookies==2.2.1
+cryptography==2.1.4
+cymem==1.31.2
+cytoolz==0.8.2
+decorator==4.1.2
+dill==0.2.7.1
+docutils==0.14
+editdistance==0.4
+en-core-web-sm==2.0.0
 eventlet==0.17.4
-gevent==1.2.2
-Flask==0.12.2
+flake8==3.5.0
+flaky==3.4.0
+flasgger==0.8.0
+Flask==0.12.1
+Flask-Cors==3.0.3
 Flask-SocketIO==2.9.2
 Flask-WTF==0.14.2
-greenlet==0.4.2
+ftfy==4.4.2
+fuzzywuzzy==0.16.0
+gensim==3.2.0
+gevent==1.2.2
+greenlet==0.4.13
+h5py==2.7.1
+html5lib==1.0.1
+idna==2.6
 itsdangerous==0.24
 Jinja2==2.8
+jmespath==0.9.3
+jsonpickle==0.9.5
+jsonschema==2.6.0
 MarkupSafe==0.23
-Werkzeug==0.11.10
-WTForms==2.1
-pymongo>=3.5.1
-python-engineio==1.7.0
-python-socketio==1.8.0
-six==1.10.0
+mccabe==0.6.1
+mistune==0.8.3
+more-itertools==4.2.0
+msgpack-numpy==0.4.1
+msgpack-python==0.4.8
+murmurhash==0.28.0
+neo4j-driver==1.5.3
+networkx==2.0
+nltk==3.2.4
+numpy==1.14.0
+overrides==1.9
 pandas==0.19.2
-numpy>=1.12.1
-cf-deployment-tracker==1.0.2
+pathlib==1.0.1
+pew==1.1.0
+pipenv==8.3.1
+plac==0.9.6
+pluggy==0.6.0
+preshed==1.0.0
+protobuf==3.5.2.post1
+psycopg2==2.7.4
+py==1.5.3
+pyasn1==0.4.3
+pycodestyle==2.3.1
+pycparser==2.18
+pyhocon==0.3.35
+pymongo==3.6.0
+pyOpenSSL==17.4.0
+pyparsing==2.2.0
+PySocks==1.6.8
+pysolr==3.7.0
+pytest==3.6.0
+python-dateutil==2.6.1
+python-engineio==1.7.0
+python-Levenshtein==0.12.0
+python-socketio==1.8.0
+pytz==2017.3
+PyYAML==3.12
+quantities==0.12.1
+regex==2017.4.5
+requests==2.18.4
+responses==0.9.0
+rsa==3.4.2
+s3transfer==0.1.12
+scikit-learn==0.19.1
+scipy==1.0.0
+semantic==1.0.3
+six==1.11.0
+smart-open==1.5.6
+spacy==2.0.5
+tabulate==0.8.2
+tensorboardX==1.0
+termcolor==1.1.0
+thinc==6.10.1
+toolz==0.8.2
+torch==0.3.1
+tqdm==4.19.5
+typing==3.6.4
+ujson==1.35
+Unidecode==1.0.22
+urllib3==1.22
+validators==0.12.0
+virtualenv==15.1.0
+virtualenv-clone==0.2.6
+watson-developer-cloud==1.0.2
+wcwidth==0.1.7
+webencodings==0.5
+Werkzeug==0.11.10
+wrapt==1.10.11
+WTForms==2.1
